# Taller2016C1TP4MegamanInicia

./: .gitignore  CMakeLists.txt  README.md  entities.h
Box2D/: CMakeLists.txt
Box2D/Box2D/Dynamics/: b2Body.cpp
client/: ClientWindow.cpp  ClientWindow.h  ConnectionScreen.cpp  ConnectionScreen.h  CreditsScreen.cpp  CreditsScreen.h  Drawable.cpp  Drawable.h  Drawables.cpp  Drawables.h  KeyMap.cpp  KeyMap.h  LevelScreen.cpp  LevelScreen.h  LevelSelectorScreen.cpp  LevelSelectorScreen.h  Lock.cpp  Lock.h  MegamanClientModel.cpp  MegamanClientModel.h  Mutex.cpp  Mutex.h  MyArea.cpp  MyArea.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  WidgetGrid.cpp  WidgetGrid.h  WindowNames.h  cSocket.cpp  cSocket.h  main.cpp
common/: CommunicationCodes.h  Drawing.cpp  Drawing.h  MegamanBeginsConstants.h  MyArea.h  SpriteDispenser.cpp  SpriteDispenser.h  Thread.cpp  common_ClientSocket.cpp  common_ClientSocket.h  common_Evento.cpp  common_Evento.h  common_Handler.cpp  common_Handler.h  common_HandlerCoordinator.cpp  common_HandlerCoordinator.h  common_Juego.cpp  common_Juego.h  common_Observador.cpp  common_Observador.h  common_SendRecvThread.cpp  common_SendRecvThread.h  common_Socket.cpp  common_Socket.h  common_Thread.cpp  common_Thread.h
editor/: .gitignore  BackgroundComboBox.cpp  BackgroundComboBox.h  BackgroundImage.cpp  BackgroundImage.h  ButtonDeleteSelection.cpp  ButtonDeleteSelection.h  CellDrawer.cpp  CellDrawer.h  ChamberLevel.cpp  ChamberLevel.h  DynamicLayer.cpp  DynamicLayer.h  EditorApp.cpp  EditorApp.h  EditorMainWindow.cpp  EditorMainWindow.h  Entity.cpp  Entity.h  EntityIconView.cpp  EntityIconView.h  EntitySet.cpp  EntitySet.h  JsonReader.cpp  JsonReader.h  Layer.cpp  Layer.h  Level.cpp  Level.h  Orientation.cpp  Orientation.h  SelectionDrawing.cpp  SelectionDrawing.h  SelectionLabel.cpp  SelectionLabel.h  Selector.cpp  Selector.h  SpriteDispenser.cpp  SpriteDispenser.h  ToolboxModelColumns.cpp  (+7 more)
glog/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  config.status  demangle.dm  demangle.nm  demangle_unittest  glog-targets.cmake  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler.out1  signalhandler.out2  signalhandler.out3  signalhandler.out4  signalhandler_unittest  signalhandler_unittest.nicolas-VirtualBox32.nicolas.log.INFO.20160509-182743.10098  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
glog/.libs/: demangle_unittest  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  lt-demangle_unittest  lt-logging_striptest0  lt-logging_striptest10  lt-logging_striptest2  lt-signalhandler_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
glog/src/: config.h
glog/src/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
levels/: basic0.json  basic1.json  basic2.json  bombman.json  fireman.json  magnetman.json  ringman.json
old/: basic1.json  simplex.json
server/: AcceptConnections.cpp  AcceptConnections.h  CMakeLists.txt  CommunicationCodes.h  Event.cpp  Event.h  Evento.cpp  Evento.h  Game.cpp  Game.h  Handler.cpp  Handler.h  HandlerCoordinator.cpp  HandlerCoordinator.h  Juego.cpp  Juego.h  Metadata.cpp  Metadata.h  Observador.cpp  Observador.h  Observer.cpp  Observer.h  SendRecvThread.cpp  SendRecvThread.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  ThreadQueue.h  greetings.txt  main.cpp  server_AcceptConnections.cpp  server_AcceptConnections.h  server_Server.cpp  server_Server.h  server_ServerSocket.cpp  (+2 more)
server/Model/: Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  FlyingEnemy.cpp  FlyingEnemy.h  Items.cpp  Items.h  LevelObject.cpp  LevelObject.h  Megaman.cpp  Megaman.h  MyContactListener.cpp  MyContactListener.h  MyLevel.cpp  MyLevel.h  ObjectFactory.cpp  ObjectFactory.h  ObjectInfo.cpp  ObjectInfo.h  Obstacle.cpp  Obstacle.h  Spawner.cpp  Spawner.h  Stat.h  Weapon.cpp  Weapon.h  basic2.json  config.json  nivel_test.json
sprites/: HealthBar.xcf
sprites/bosses/bombman/: bombman_cast_attack.xcf  bombman_cast_attack1.xcf  bombman_idle.xcf  bombman_juggle.xcf  bombman_jump.xcf  (+2 more)
sprites/items/: big_energy_capsule.xcf  big_plasma_capsule.xcf  life.xcf  small_energy_capsule.xcf  small_plasma_capsule.xcf
sprites/megaman pc/: megaman_attack0.xcf  megaman_attack_climbing.xcf  megaman_attack_jumping.xcf  megaman_attack_running.xcf  megaman_attack_running1.xcf  megaman_attack_running2.xcf  megaman_bomb_throw.xcf  megaman_climb.xcf  megaman_climb_ontop.xcf  megaman_fall.xcf  megaman_idle.xcf  megaman_idle1.xcf  megaman_idle2.xcf  megaman_jump.xcf  megaman_run0.xcf  megaman_run1.xcf  megaman_run2.xcf  megaman_swipe.xcf
sprites/mobs/: bumby0.xcf  bumby1.xcf  met_hidden.xcf  met_transition.xcf  met_vulnerable.xcf  sniper_attacking.xcf  sniper_defended.xcf  sniper_jumping.xcf  sniper_vulnerable.xcf
sprites/weapons/: bomb_explosion0.xcf  bomb_explosion1.xcf  bomb_explosion2.xcf  bomb_explosion3.xcf  bombman_weapon.xcf  fireman_fallout0.xcf  fireman_fallout1.xcf  fireman_weapon0.xcf  fireman_weapon1.xcf  magnetman_weapon.xcf  megaman_weapon.xcf  met_weapon.xcf  ringman_weapon0.xcf  ringman_weapon1.xcf  ringman_weapon2.xcf  ringman_weapon3.xcf  sniper_weapon.xcf  sparkman_weapon1_0.xcf  sparkman_weapon2_0.xcf  sparkman_weapon2_1.xcf  weapon1_1.xcf
(+71 files in other folders)
